[project]
name = "argyle-recommender"
version = "0.1.0"
description = "Argyle's Resource Recommender for Kubernetes, uses Robusta KRR under the hood"
authors = [{name = "Chico Venancio", email = "francisco@argyle.com"}]
license = {text = "MIT"}
requires-python = ">=3.10,<=3.12.9"
dependencies = [
    # Core dependencies
    "fastapi[standard]",
    "uvicorn[standard]>=0.34.2",
    # Application-specific dependencies
    "typer[all]==0.9.0",
    "pydantic==1.10.15",
    "numpy>=1.26.4,<1.27.0",
    "structlog>=24.1.0",
    "ruamel-yaml>=0.18.5",
    "pygithub>=2.1.1",
    "gitpython>=3.1.40",
    # Note: robusta-krr needs to be installed separately due to pyproject.toml issues
    # Use: uv pip install git+https://github.com/robusta-dev/krr.git@v1.25.1
    "robusta-krr",
]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[project.scripts]
krr = "robusta_krr.main:run"

[project.optional-dependencies]
dev = [
    "mypy>=1.0.1",
    "black>=23.1.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest>=7.2.2",
]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin,pydantic.mypy"

[tool.uv.sources]
robusta-krr = { path = "krr" }
